[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenue.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Grass_MM.PNG" type="Texture" id=3]

[sub_resource type="Theme" id=4]

[sub_resource type="GDScript" id=5]
script/source = "extends Panel


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )
grow_end = 2.0
vertical = true

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
grow_end = 2.0
vertical = true

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
grow_end = 2.0
vertical = true

[node name="MainMenue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 376, 176 )
scale = Vector2( 1.29032, 1.29032 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite"]
margin_left = -93.0
margin_top = -87.0
margin_right = 136.0
margin_bottom = -37.0
text = "Saving the Garden"

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.592157, 1, 0, 1 )
margin_right = 160.0
margin_bottom = 368.0
theme = SubResource( 4 )
script = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 72.0
margin_right = 128.0
margin_bottom = 140.0

[node name="start" type="Button" parent="Panel/VBoxContainer"]
margin_right = 88.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "Jouer"

[node name="options" type="Button" parent="Panel/VBoxContainer"]
margin_top = 20.0
margin_right = 88.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Informations"

[node name="quit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 40.0
margin_right = 88.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Quitter"

[connection signal="pressed" from="Panel/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
